# dynamo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  launch_cluster.sh
include/error/: error_detector.h  handoff.h  quorom_error.h  storage_error.h
include/hash_ring/: hash_ring.h  node.h  quorom.h  rpc.h
include/logging/: logger.h
include/membership/: gossip.h
include/server/: server.h
include/storage/: base64.hpp  disk_engine.h  memory_engine.h  serializer.h  storage_engine.h  value.h
scripts/: persistence.py  replication.py  test.py
src/: main.cpp
src/error/: error_detector.cpp  handoff.cpp
src/hash_ring/: hash_ring.cpp  node.cpp  quorom.cpp
src/logging/: logger.cpp
src/membership/: gossip.cpp
src/storage/: disk_engine.cpp  memory_engine.cpp
tests/: CMakeLists.txt
tests/clock/: vector_clock_test.cc
tests/hashing/: hash_ring_test.cc
tests/serialization/: serializer_test.cc
webui/: README.md  app.js  index.html  ring.html  ring.js  serve.sh  style.css
